edition = "2023";
package testgen;

import "confpb/v1/field.proto";

option go_package = ".;main";

option features.field_presence = IMPLICIT;

message Int64 {
  int64 normal = 1 [(confpb.v1.env) = "INT64"];
  int64 with_presence = 2 [(confpb.v1.env) = "INT64_WITH_PRESENCE", features.field_presence = EXPLICIT];
  repeated int64 list = 3 [(confpb.v1.env) = "INT64_LIST"];

  oneof oneof_test {
    int64 oneof_option_a = 4 [(confpb.v1.env) = "INT64_ONEOF_A"];
    int64 oneof_option_b = 5 [(confpb.v1.env) = "INT64_ONEOF_B"];
  }
}
